<resources>
    <string name="app_name">Android Basics</string>
    <string name="welcome_title">Android Basics in Kotlin</string>
    <string name="welcome_description">Welcome to Android Basics in Kotlin! In this course, you\'ll learn the basics of building Android apps with the Kotlin programming language. Along the way, you\'ll develop a collection of apps to start your journey as an Android developer.</string>
    <string name="earnable_badges">Earnable Badges</string>
    <string name="explore">Explore</string>
    <string name="video">Video</string>
    <string name="optional">Optional</string>
    <string name="take_codelab">Take CodeLab</string>
    <string name="play">Play</string>
    <string name="bullet">&#8226;</string>
    <string name="loading">Loading</string>
    <string name="home">Home</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="topics">Topics</string>
    <string name="platform">Platform</string>
    <string name="android_studio">Android Studio</string>
    <string name="google_play">Google Play</string>
    <string name="jetpack">Jetpack</string>
    <string name="kotlin">Kotlin</string>
    <string name="docs">Docs</string>
    <string name="games">Games</string>
    <string name="developers">Developers</string>
    <string name="fragment_units_label"></string>
    <string name="fragment_pathways_label">Unit {id}</string>
    <string name="fragment_activities_label">Pathway {number}</string>
    <string name="badge_image">Badge Image</string>
    <string name="search">Search</string>
    <string name="search_hint">Search topics</string>
    <string name="share">Share</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="general">General</string>
    <string name="dark_theme">Dark theme</string>
    <string name="dark_theme_summary">Reduce glare and improve night viewing</string>
    <string name="dialog_message">Developer: Aung Ko Oo</string>
    <string name="github">Github</string>
    <string name="theme">Theme</string>
</resources>