<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!--<item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="always|collapseActionView" />-->
    <!--<item
        android:id="@+id/menu_search"
        android:title="@string/search"
        android:icon="@drawable/ic_search"
        app:actionViewClass="com.google.android.material.search.SearchView"
        app:showAsAction="ifRoom|collapseActionView"/>-->
    <item
        android:id="@+id/menu_bookmark"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/bookmarks" />
    <item
        android:id="@+id/menu_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/settings" />
    <item
        android:id="@+id/menu_about"
        android:icon="@drawable/ic_info"
        android:title="@string/about" />
</menu>