<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="me.ako.androidbasics.data.model.ActivityEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card"
        android:checkable="true"
        android:checked="@{item.finished}"
        android:layout_margin="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_title"
                android:text="@{item.title}"
                tools:text="@string/welcome_title"
                android:textSize="@dimen/text_unit_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_type"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:drawableStartCompat="@drawable/ic_video"
                android:drawablePadding="@dimen/padding_normal"
                android:text="@string/video"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_optional"
                app:optional="@{item.optional}"
                android:textStyle="italic"
                tools:visibility="visible"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:layout_constraintStart_toEndOf="@id/txt_type"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintBottom_toTopOf="@id/img_thumbnail"
                android:text="@string/optional"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/img_thumbnail"
                android:contentDescription="@{item.title}"
                android:scaleType="centerCrop"
                tools:srcCompat="@tools:sample/backgrounds/scenic"
                app:layout_constraintDimensionRatio="h,4:3"
                app:layout_constraintTop_toBottomOf="@id/txt_type"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="0dp"
                android:layout_height="0dp"/>

            <ImageView
                android:id="@+id/img_play"
                android:visibility="invisible"
                tools:visibility="visible"
                android:src="@drawable/ic_play"
                android:scaleType="fitCenter"
                android:contentDescription="@string/play"
                app:layout_constraintTop_toTopOf="@id/img_thumbnail"
                app:layout_constraintBottom_toBottomOf="@id/img_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="50dp"
                android:layout_height="50dp"/>

            <ProgressBar
                android:id="@+id/progress_thumbnail"
                app:layout_constraintTop_toTopOf="@id/img_thumbnail"
                app:layout_constraintBottom_toBottomOf="@id/img_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_activity_description"
                android:text="@{item.description}"
                android:paddingTop="@dimen/padding_normal"
                tools:text="@string/welcome_description"
                android:textSize="@dimen/text_unit_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/img_thumbnail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>