<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="item"
            type="me.ako.androidbasics.data.model.UnitWithPathways" />
    </data>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".presentation.view.FragmentPathways">

            <LinearLayout
                android:id="@+id/header"
                android:padding="@dimen/padding_large"
                android:background="@color/background_alt"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:orientation="vertical"
                android:layout_width="0dp"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/img_unit"
                    android:src="@drawable/android_basics_kotlin"
                    android:contentDescription="@string/app_name"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:layout_width="@dimen/image_badge"
                    android:layout_height="@dimen/image_badge" />

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_title"
                    android:textColor="@color/white"
                    android:textStyle="bold"
                    android:textSize="@dimen/text_title"
                    tools:text="@string/welcome_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

                <com.google.android.material.textview.MaterialTextView
                    android:id="@+id/txt_description"
                    android:text="@{item.unit.description}"
                    android:textColor="@color/white"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_normal"
                    android:layout_marginBottom="@dimen/margin_normal"
                    android:textSize="@dimen/text_description"
                    tools:text="@string/welcome_description" />

            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recycler_view_pathways"
                app:pathways="@{item.pathways}"
                tools:listitem="@layout/item_pathway"
                tools:itemCount="1"
                app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/header"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>
</layout>