<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="item"
            type="me.ako.androidbasics.data.model.ActivityEntity" />
    </data>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/card_activity"
        android:checkable="true"
        android:focusable="true"
        android:clickable="true"
        android:checked="@{item.finished}"
        android:layout_margin="@dimen/margin_normal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:padding="@dimen/padding_large"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_title"
                android:text="@{item.title}"
                tools:text="@string/welcome_title"
                android:textSize="@dimen/text_title"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_type"
                app:activityType="@{item.type}"
                android:gravity="center_vertical"
                android:paddingTop="@dimen/padding_normal"
                android:paddingBottom="@dimen/padding_normal"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:drawableStartCompat="@drawable/ic_codelab"
                android:drawablePadding="@dimen/padding_normal"
                tools:text="CodeLab"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_optional"
                app:optional="@{item.optional}"
                android:textStyle="italic"
                tools:visibility="visible"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/padding_normal"
                android:paddingEnd="@dimen/padding_normal"
                app:layout_constraintStart_toEndOf="@id/txt_type"
                app:layout_constraintTop_toBottomOf="@id/txt_title"
                app:layout_constraintBottom_toTopOf="@id/txt_description"
                android:text="@string/optional"
                android:layout_width="wrap_content"
                android:layout_height="0dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/txt_description"
                android:text="@{item.description}"
                android:paddingTop="@dimen/padding_normal"
                tools:text="@string/welcome_description"
                android:textSize="@dimen/text_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/txt_type"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>
</layout>